# hello_generator

./: Cargo.toml  README.md
src/: consts.rs  individual.rs  main.rs  sinewave.rs  waveform.rs
