[package]
name = "hello_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vosk = "0.2.0"
tinyrand = "0.5.0"
levenshtein-diff = "0.2.3"
clap = { version = "4.0.15", features = ["cargo"] }
wav = "1.0.0"
rayon = "1.5"
